--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,6 @@ import Layout from '../layouts/Layout.astro'
 	<h1>
 		Astro
 	</h1>
-	Mi primer pagina con astro.
+	Mi primer pagina con Astro.
 </Layout>
 
