Estructura de Semestres

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro"
 <Layout>
     <body>
         <a href="/">Inicio</a>
+        <a href="../">Atras</a>
 
         <h1>Blog personal.</h1>
         <ul>
