--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,12 @@ import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout>
-	<a href="/about/">Nosotros</a>
-	<a href="/semestre2/">Semestre 2</a>
+	<a href="/about/">Sobremi</a>
+	<a href="/mapa/">SEMESTRES</a>
 	<a href="/blog/">Blog</a>
 
 	<h1>
-		Astro, Pagina principal.
+		INGENIERIA EN INTELIGENCIA ARTIFICIAL
 	</h1>
 	Mi primer pagina con Astro.
 </Layout>
