--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -5,8 +5,8 @@ import Layout from "../../../layouts/Layout.astro"
 <Layout>
     <body>
         <a href="/">Inicio</a>
-        <a href="../../mapa">Mapa</a>
+        <a href="/mapa/">Mapa</a>
         <h2>Apuntes de Algoritmos y Estructuras de Datos</h2>
-        <a href="./practicas/">Practicas</a>
+        <a href="/semestre2/B201/practicas/">Practicas</a>
     </body>
 </Layout>
