--- a/src/pages/semestre3/B303/ecuaciones-diferenciales.astro
+++ b/src/pages/semestre3/B303/ecuaciones-diferenciales.astro
@@ -3,7 +3,7 @@ import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="../../mapa">Mapa</a>
+    <a href="/mapa/">Mapa</a>
     <body>
         <h2>Apuntes de ecuaciones diferenciales</h2>
     </body>
