--- a/src/pages/semestre3/B305/diseño-de-sistemas-digitales.astro
+++ b/src/pages/semestre3/B305/diseño-de-sistemas-digitales.astro
@@ -3,7 +3,7 @@ import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="../../mapa">Mapa</a>
+    <a href="/mapa/">Mapa</a>
     <body>
         <h2>Apuntes de Diseño de sistemas digitales</h2>
     </body>
