--- a/src/pages/semestre1/B106/fundamentos-esonomicos.astro
+++ b/src/pages/semestre1/B106/fundamentos-esonomicos.astro
@@ -3,7 +3,7 @@ import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <a href="../../mapa">Mapa</a>
+    <a href="/mapa/">Mapa</a>
     <body>
         <h1>Apuntes de Fundamentos Economicos</h1>
     </body>
