--- a/src/pages/semestre2/B206/finanzas-empresariales.astro
+++ b/src/pages/semestre2/B206/finanzas-empresariales.astro
@@ -5,6 +5,8 @@ import Layout from "../../../layouts/Layout.astro"
 <Layout>
     <a href="/mapa/">Mapa</a>
     <body>
-        <h2>Apuntes de Finanzas</h2>
+        <h1>Apuntes de Finanzas Empresariales</h1>
+        <h2>Unidad I</h2>
+        <h2>Unidad II</h2>
     </body>
 </Layout>
