--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,13 @@
 ---
+import Navigation from "../components/Navigation.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout>
+    <Navigation />
     <body>
-        <a href="/">Inicio</a>
-        <a href="../">Atras</a>
-
-        <h1>Blog personal.</h1>
+        <h1>Blog personal</h1>
+        <h2>Documentacion</h2>
         <ul>
             <li><a href="/posts/post-1/">Publicación 1</a></li>
             <li><a href="/posts/post-2/">Publicación 2</a></li>
