--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
+import Navigation from '../components/Navigation.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout>
-	<a href="/about/">Sobremi</a>
-	<a href="/mapa/">SEMESTRES</a>
-	<a href="/blog/">Blog</a>
-
+	<Navigation />
 	<h1>
 		INGENIERIA EN INTELIGENCIA ARTIFICIAL
 	</h1>
