--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -1,12 +1,12 @@
 ---
+import Navigation from "../components/Navigation.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 
 <Layout>
+  <Navigation />
   <body>
-    <a href="/">Inicio</a>
-    <a href="../">Atras</a>
-    
+    <h1>Mapa Curricular</h1>
     <h2>
       <ul>Primer Semestre</ul>
       <li><a href="/semestre1/B101/fundamentos-de-programacion">Fundamentos de Programacion</a></li>
