--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,6 +3,8 @@
 ---
 
 <a href="/">Inicio</a>
-<a href="/about/">Acerca</a>
 <a href="/blog/">Blog</a>
-<a href="/mapa/">Mapa</a>
+<a href="/biblioteca/">Biblioteca</a>
+<a href="/mapa/">Semestres</a>
+<a href="/proyectos/">Proyectos</a>
+<a href="/about/">Acerca</a>
