--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -4,12 +4,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Navigation />
-	<body>
-		<h1>
-			INGENIERIA EN INTELIGENCIA ARTIFICIAL
-		</h1>
-		Mi primer pagina con Astro.
-	</body>
+    <Navigation />
+    <body>
+        <h1>Proyectos desarrollados durante la carrera</h1>
+    </body>
 </Layout>
-
