--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -1,11 +1,11 @@
 ---
+import Navigation from "../../../components/Navigation.astro"
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
+    <Navigation />
     <body>
-        <a href="/">Inicio</a>
-        <a href="/mapa/">Mapa</a>
         <h2>Apuntes de Algoritmos y Estructuras de Datos</h2>
         <a href="/semestre2/B201/practicas/">Practicas</a>
     </body>
