--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,28 @@
+:root {
+  --t1-foreground: #a9b1d6;
+  --t1-background: #1a1b26;
+  
+  --t1-black: #28344a;
+  --t1-gray: #414868;
+  --t1-red: #f7768e;
+  --t1-green: #73eaba;
+  --t1-yellow: #e0af68;
+  --t1-blue: #7aa2f7;
+  --t1-magenta: #bb9af7;
+  --t1-cyan: #7dcfff;
+  --t1-white: #c0caf5;
+}
+
 html {
-    background-color: #0c151f;
-    font-family: sans-serif;
+    background-color: var(--t1-background);
+    color: var(--t1-foreground);
+    font-family: monospace;
   }
   
   body {
     margin: 0 auto;
     width: 100%;
-    max-width: 80ch;
+    max-width: 90ch;
     padding: 1rem;
     line-height: 1.5;
   }
@@ -16,7 +32,49 @@ html {
   }
   
   h1 {
-    color: aquamarine;
+    /*color: #4b27ca;*/
     margin: 1rem 0;
+    font-size: 3rem;
+  }
+
+  h2 {
     font-size: 2.5rem;
+  }
+
+  ul {
+    font-size: 1.5rem;
+  }
+  
+  p {
+    line-height: 1.4;
+  }
+  
+  a {
+    outline: none;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 1px 8px 0;
+  }
+  
+  a:link { /*Color de enlace no visitado*/
+    color: var(--t1-foreground);
+  }
+  
+  a:visited {  /*Color de enlace visitado*/
+    color: var(--t1-foreground);
+  }
+  
+  a:focus {  /*Colores que se quedan al arrastrar el enlace*/
+    /*border-bottom: 1px solid;*/
+    background: var(--t1-background);
+  }
+  
+  a:hover {  /*Colores al colocar el cursor encima del enlace*/
+    background: var(--t1-blue);
+    color: var(--t1-black);
+  }
+  
+  a:active {  /*Colores la hacer click en el enlace*/
+    background: var(--t1-black);
+    color: var(--t1-blue);
   }
