--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -40,5 +40,6 @@ const skillcolor = "navy";
 
     <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
 
+    <p>"Primer commit desde termux"</p>
   </body>
 </Layout>
