Cambio de tema principal

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,12 @@
 ---
-console.log("javascript")
+import Navigation from "./Navigation.astro"
 ---
 
 <header>
-    <div>
-        <h2>
-            IIA ESCOM
-        </h2>
-    </div>
-
+    <div></div>
+    <nav>
+        <Navigation />
+    </nav>
+    <div></div>
 </header>
 
