--- a/src/pages/biblioteca.astro
+++ b/src/pages/biblioteca.astro
@@ -1,11 +1,25 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <Navigation />
+    <Header />
     <body>
-        <h1>Coleccion de recursos digitales</h1>
+        <div class="hoja">
+            <h1>Coleccion de recursos digitales</h1>
+            <div class="seccion">
+                <h2>Libros</h2>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>Manuales</h2>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>Ejercicios</h2>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
