--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,25 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Navigation />
+	<Header />
 	<body>
-		<h1>
-			INGENIERIA EN INTELIGENCIA ARTIFICIAL
-		</h1>
-		Mi primer pagina con Astro.
+		<div class="hoja">
+			<h1>
+				INGENIERIA EN INTELIGENCIA ARTIFICIAL
+			</h1>
+            <div class="seccion">
+				<h2>Mi primer pagina con Astro.
+			</div>
+			<br>
+			<div class="seccion">
+				<h2>Noticias sobre IA
+
+			</div>
+			<br>
+		</div>
 	</body>
 </Layout>
 
