--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -1,11 +1,29 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <Navigation />
+    <Header />
     <body>
-        <h1>Proyectos desarrollados durante la carrera</h1>
+        <div class="hoja">
+            <h1>Proyectos desarrollados durante la carrera</h1>
+            <div class="seccion">
+                <h2>Brazo Robotico 6GDL</h2>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>Robot de pelea 3lb</h2>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>Robot Sumo</h2>
+            </div>
+            <br>
+            <div class="seccion">
+                <h2>Desarrollo Web</h2>
+            </div>
+            <br>
+        </div>
     </body>
 </Layout>
