--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -1,12 +1,14 @@
 ---
-import Navigation from "../../../components/Navigation.astro"
+import Header from "../../../components/Header.astro";
 import Layout from "../../../layouts/Layout.astro"
 ---
 
 <Layout>
-    <Navigation />
+    <Header />
     <body>
-        <h2>Apuntes de Algoritmos y Estructuras de Datos</h2>
-        <a href="/semestre2/B201/practicas/">Practicas</a>
+        <div class="libreta">
+            <h2>Apuntes de Algoritmos y Estructuras de Datos</h2>
+            <a href="/semestre2/B201/practicas/">Practicas</a>
+        </div>
     </body>
 </Layout>
