--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,12 @@
 ---
 
 ---
+<div class="nav-links">
+    <a href="/">Inicio</a>
+    <a href="/blog/">Blog</a>
+    <a href="/biblioteca/">Biblioteca</a>
+    <a href="/mapa/">Semestres</a>
+    <a href="/proyectos/">Proyectos</a>
+    <a href="/about/">Acerca</a>
+</div>
 
-<a href="/">Inicio</a>
-<a href="/blog/">Blog</a>
-<a href="/biblioteca/">Biblioteca</a>
-<a href="/mapa/">Semestres</a>
-<a href="/proyectos/">Proyectos</a>
-<a href="/about/">Acerca</a>
