--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
 
 const pageTitle = "Sobre mi";
@@ -32,14 +33,18 @@ const skillcolor = "navy";
       }
     </style>
   </head>
-  <Navigation />
+  <Header />
   <body>
-    <h1>Acerca de la pagina</h1>
-
-    <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
-
-    <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
-
-    <p>Primer commit desde termux</p>
+    <div class="hoja">
+      <h1>Acerca de la pagina</h1>
+      <div class="seccion">
+        <h2>Informacion</h2>
+        <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
+        <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
+        <p>Primer commit desde termux</p>
+      </div>
+      <br>
+    </div>
+    <Footer />
   </body>
 </Layout>
