--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,17 +1,27 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-    <Navigation />
+    <Header />
     <body>
-        <h1>Blog personal</h1>
-        <h2>Documentacion</h2>
-        <ul>
-            <li><a href="/posts/post-1/">Publicación 1</a></li>
-            <li><a href="/posts/post-2/">Publicación 2</a></li>
-            <li><a href="/posts/post-3/">Publicación 3</a></li>
-          </ul>
+        <div class="hoja">
+            <h1>Blog personal</h1>
+            
+            <div class="seccion">
+                <h2>Documentacion</h2>
+                <ul class="materias">
+                    <li><a href="/posts/post-1/">Publicación 1</a></li>
+                    <li><a href="/posts/post-2/">Publicación 2</a></li>
+                    <li><a href="/posts/post-3/">Publicación 3</a></li>
+                </ul>
+            </div>
+            <br>
+            <div class="seccion">
+				<h2>Investigaciones
+			</div>
+            <br>
+        </div>
     </body>
 </Layout>
