--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,20 @@
 ---
 import Social from "./Social.astro"
 ---
-<style>
-    footer {
-        display: flex;
-        gap: 1rem;
-        margin-top: 2rem;
-        margin-left: 6rem;
-    }
-</style>
 
 <footer>
-  <Social platform="github" username="Ful4nito" />
+  <Social platform="GitHub" username="Ful4nito" />
+  <a href="https://www.linkedin.com/in/jonathan-baez-648934281/">Linkedin</a>
 </footer>
+
+<style>
+  a {
+      padding: 0.2rem 1rem;
+      font-weight: bold;
+      color: #EFEFEF;
+      background-color: #008bdb;
+      text-decoration: none;
+      border-radius: 2px;
+      
+  }
+</style>
