--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,10 +3,10 @@ import Navigation from "./Navigation.astro"
 ---
 
 <header>
-    <div></div>
+    <div class="logo">4321</div>
+    <div class="navspace"></div>
     <nav>
         <Navigation />
     </nav>
-    <div></div>
 </header>
 
