--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -8,8 +8,8 @@ const { platform, username } = Astro.props;
     a {
         padding: 0.2rem 1rem;
         font-weight: bold;
-        color:rgb(31, 31, 31);
-        background-color:rgb(48, 255, 117);
+        color: #EFEFEF;
+        background-color: #00913F;
         text-decoration: none;
         border-radius: 2px;
         
