--- a/src/pages/mapa.astro
+++ b/src/pages/mapa.astro
@@ -7,76 +7,102 @@ import Layout from "../layouts/Layout.astro";
   <Header />
   <body>
     <div class="hoja">
-      <div><h1>MAPA CURRICULAR</h1></div>
+      <div><h1>Mapa Curricular</h1></div>
 
-      <div class="seccion">
-        <h2>Primer Semestre</h2>
-          <ul class="materias">
-          <li><a href="/semestre1/B101/fundamentos-de-programacion">Fundamentos de Programacion</a></li>
-            <li><a href="/semestre1/B102/matematicas-discretas">Matematicas Discretas</a></li>
-            <li><a href="/semestre1/B103/comunicacion-oral-y-escrita">Comunicacion Oral y Escrita</a></li>
-            <li><a href="/semestre1/B104/calculo">Calculo</a></li>
-            <li><a href="/semestre1/B105/mecanica-y-electromagnetismo">Mecanica y Electromagnetismo</a></li>
-            <li><a href="/semestre1/B106/fundamentos-esonomicos">Fundamentos Economicos</a></li>
-          </ul>
-      </div>
-        <br><br>
+      <div class="contenedor1">
+        <div class="semestre">
+          <h2>PRIMER SEMESTRE</h2>
+            <ul class="materias">
+            <li><a href="/semestre1/B101/fundamentos-de-programacion">FUNDAMENTOS DE PROGRAMACIÓN</a></li>
+              <li><a href="/semestre1/B102/matematicas-discretas">MATEMATICAS DISCRETAS</a></li>
+              <li><a href="/semestre1/B103/comunicacion-oral-y-escrita">COMUNICACIÓN ORAL Y ESCRITA</a></li>
+              <li><a href="/semestre1/B104/calculo">CALCULO</a></li>
+              <li><a href="/semestre1/B105/mecanica-y-electromagnetismo">MECANICA Y ELECTROMAGNETISMO</a></li>
+              <li><a href="/semestre1/B106/fundamentos-esonomicos">FUNDAMENTOS ECONOMICOS</a></li>
+            </ul>
+        </div>
 
-      <div class="seccion">
-        <h2>Segundo Semestre</h2>
-          <ul class="materias">
-            <li><a href="/semestre2/B201/algoritmos-y-estructuras-de-datos">Algoritmos y Estructuras de Datos</a></li>
-            <li><a href="/semestre2/B202/algebra-lineal">Algebra Lineal</a></li>
-            <li><a href="/semestre2/B203/fundamentos-de-diseño-digital">Diseño de Sistemas Digitales</a></li>
-            <li><a href="/semestre2/B204/calculo-multivariable">Calculo Multivariable</a></li>
-            <li><a href="/semestre2/B205/ingenieria-etica-y-sociedad">Ingenieria, Etica y Sociedad</a></li>
-            <li><a href="/semestre2/B206/finanzas-empresariales">Finanzas Empresariales</a></li>
-          <ul/>
-      </div>
-        <br><br>
+        <div class="semestre">
+          <h2>SEGUNDO SEMESTRE</h2>
+            <ul class="materias">
+              <li><a href="/semestre2/B201/algoritmos-y-estructuras-de-datos">ALGORITMOS Y ESTRUCTURAS DE DATOS</a></li>
+              <li><a href="/semestre2/B202/algebra-lineal">ALGEBRA LINEAL</a></li>
+              <li><a href="/semestre2/B203/fundamentos-de-diseño-digital">FUNDAMENTOS DE DISEÑO DIGITAL</a></li>
+              <li><a href="/semestre2/B204/calculo-multivariable">CALCULO MULTIVARIABLE</a></li>
+              <li><a href="/semestre2/B205/ingenieria-etica-y-sociedad">INGENIERIA, ETICA Y SOCIEDAD</a></li>
+              <li><a href="/semestre2/B206/finanzas-empresariales">FINANZAS EMPRESARIALES</a></li>
+            <ul/>
+        </div>
 
-      <div class="seccion">
-        <h2>Tercer Semestre</h2>
-          <ul class="materias">
-          <li><a href="/semestre3/B301/analisis-y-diseño-de-algoritmos">Analisis y Diseño de Algoritmos</a></li>
-            <li><a href="/semestre3/B302/paradigmas-de-programacion">Paradigmas de Programacion</a></li>
-            <li><a href="/semestre3/B303/ecuaciones-diferenciales">Ecuaciones Diferenciales</a></li>
-            <li><a href="/semestre3/B304/bases-de-datos">Bases de Datos</a></li>
-            <li><a href="/semestre3/B305/diseño-de-sistemas-digitales">Diseño de Sistemas Digitales</a></li>
-            <li><a href="/semestre3/B306/liderazgo-personal">Liderazgo Personal</a></li>
-          </ul>
-      </div>
-        <br><br>
+        <div class="semestre">
+          <h2>TERCER SEMESTRE</h2>
+            <ul class="materias">
+              <li><a href="/semestre3/B301/analisis-y-diseño-de-algoritmos">ANÁLISIS Y DISEÑO DE ALGORITMOS</a></li>
+              <li><a href="/semestre3/B302/paradigmas-de-programacion">PARADIGMAS DE PROGRAMACIÓN</a></li>
+              <li><a href="/semestre3/B303/ecuaciones-diferenciales">ECUACIONES DIFERENCIALES</a></li>
+              <li><a href="/semestre3/B304/bases-de-datos">BASES DE DATOS</a></li>
+              <li><a href="/semestre3/B305/diseño-de-sistemas-digitales">DISEÑO DE SISTEMAS DIGITALES</a></li>
+              <li><a href="/semestre3/B306/liderazgo-personal">LIDERAZGO PERSONAL</a></li>
+            </ul>
+        </div>
 
-      <div class="seccion">
-        <h2>Cuarto Semestre</h2>
-          <ul class="materias"></ul>
-      </div>
-        <br><br>
-        
-      <div class="seccion">
-        <h2>Quinto Semestre</h2>
-          <ul class="materias"></ul>
-      </div>
-        <br><br>
+        <div class="semestre">
+          <h2>CUARTO SEMESTRE</h2>
+            <ul class="materias">
+                <li><a href="#">FUNDAMENTOS DE INTELIGENCIA ARTIFICIAL</a></li>
+                <li><a href="#">PROBABILIDAD Y ESTADÍSTICA</a></li>
+                <li><a href="#">MATEMÁTICAS AVANZADAS PARA LA INGENIERÍA</a></li>
+                <li><a href="#">TECNOLOGÍAS PARA EL DESARROLLO DE APLICACIONES WEB</a></li>
+                <li><a href="#">ANÁLISIS Y DISEÑO DE SISTEMAS</a></li>
+                <li><a href="#">PROCESAMIENTO DIGITAL DE IMÁGENES</a></li>
+              </ul>
+        </div>
+          
+        <div class="semestre">
+          <h2>QUINTO SEMESTRE</h2>
+            <ul class="materias">
+              <li><a href="#">APRENDIZAJE DE MÁQUINA</a></li>
+              <li><a href="#">VISIÓN ARTIFICIAL</a></li>
+              <li><a href="#">TEORÍA DE LA COMPUTACIÓN</a></li>
+              <li><a href="#">PROCESAMIENTO DE SEÑALES</a></li>
+              <li><a href="#">ALGORITMOS BIOINSPIRADOS</a></li>
+              <li><a href="#">TECNOLOGÍAS DE LENGUAJE NATURAL</a></li>
+            </ul>
+        </div>
 
-      <div class="seccion">
-        <h2>Sexto Semestre</h2>
-          <ul class="materias"></ul>
+        <div class="semestre">
+          <h2>SEXTO SEMESTRE</h2>
+              <ul class="materias">
+              <li><a href="#">CÓMPUTO PARALELO</a></li>
+              <li><a href="#">REDES NEURONALES Y APRENDIZAJE PROFUNDO</a></li>
+              <li><a href="#">INGENIERÍA DE SOFTWARE PARA SISTEMAS INTELIGENTES</a></li>
+              <li><a href="#">METODOLOGÍA DE LA INVESTIGACIÓN Y DIVULGACIÓN CIENTÍFICA</a></li>
+              <li><a href="#">OPTATIVA A</a></li>
+              <li><a href="#">OPTATIVA B</a></li>
+            </ul>
+        </div> 
+
+        <div class="semestre">
+          <h2>SEPTIMO SEMESTRE</h2>
+              <ul class="materias">
+              <li><a href="#">TRABAJO TERMINAL I</a></li>
+              <li><a href="#">RECONOCIMIENTO DE VOZ</a></li>
+              <li><a href="#">FORMULACIÓN Y EVALUACIÓN DE PROYECTOS INFORMÁTICOS</a></li>
+              <li><a href="#">OPTATIVA C</a></li>
+              <li><a href="#">OPTATIVA D</a></li>
+            </ul>
+        </div> 
+
+        <div class="semestre">
+          <h2>OCTAVO SEMESTRE</h2>
+            <ul class="materias">
+              <li><a href="#">TRABAJO TERMINAL II</a></li>
+              <li><a href="#">GESTIÓN EMPRESARIAL</a></li>
+              <li><a href="#">ESTANCIA PROFESIONAL</a></li>
+              <li><a href="#">DESARROLLO DE HABILIDADES SOCIALES PARA LA ALTA DIRECCIÓN</a></li>
+            </ul>
+        </div> 
       </div> 
-        <br><br>
-
-      <div class="seccion">
-        <h2>Septimo Semestre</h2>
-          <ul class="materias"></ul>
-      </div> 
-        <br><br>
-
-      <div class="seccion">
-        <h2>Octavo Semestre</h2>
-          <ul class="materias"></ul>
-      </div> 
-      <br><br> 
     </div>    
   </body>
 </Layout>
