--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
             </div>
             <br>
             <div class="seccion">
-                <h2>Robot Sumo</h2>
+                <h2>Robot Sumo Autonomo</h2>
             </div>
             <br>
             <div class="seccion">
