--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -6,9 +6,45 @@ import Layout from "../../../layouts/Layout.astro"
 <Layout>
     <Header />
     <body>
-        <div class="libreta">
-            <h2>Apuntes de Algoritmos y Estructuras de Datos</h2>
-            <a href="/semestre2/B201/practicas/">Practicas</a>
+        <div class="hoja">
+            <h2>ALGORITMOS Y ESTRUCTURAS DE DATOS</h2>
+            <div class="seccion">
+                <h3>Apuntes</h3>
+            </div>
+            <br>
+            <div class="seccion">
+                <h3>Practicas</h3>
+                <div class="contenedor1">
+                    <div class="unidad">
+                        <h4>Unidad I</h4>
+                        <ul class="materias">
+                            <li><a href="/semestre2/B201/practica1/">Practica 1 [10]</a></li>
+                            <li><a href="/semestre2/B201/practica2/">Practica 2 [10]</a></li>
+                            <li><a href="/semestre2/B201/practica3/">Practica 3 [10]</a></li>
+                            <li><a href="/semestre2/B201/practica4/">Practica 4 [10]</a></li>
+                            <li><a href="/semestre2/B201/practica5/">Practica 5 ![08] </a></li>
+                            <li><a href="/semestre2/B201/practica6/">Practica 6 [10]</a></li>
+                        </ul>
+                    </div>
+                    <div class="unidad">
+                        <h4>Unidad II</h4>
+                        <ul class="materias">
+                            <li><a href="/semestre2/B201/practica7/">Practica 7 ![0]</a></li>
+                            <li><a href="/semestre2/B201/practica8/">Practica 8 [?]</a></li>
+                        </ul>
+                    </div>
+                    <div class="unidad">
+                        <h4>Unidad III</h4>
+                        <ul class="materias">
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="seccion">
+                <h3>Notas</h3>
+            </div>
+            <br>
         </div>
     </body>
 </Layout>
