--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,35 +3,12 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
 
-const pageTitle = "Sobre mi";
-
-const identity = {
-  firstName: "Sarah",
-  country: "Canada",
-  occupation: "Escritor técnico",
-  hobbies: ["fotografia", "observación de aves", "peñarol"],
-};
-
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
-
-const happy = true;
-const finished = false;
-const goal = 3;
-
-const skillcolor = "navy";
 ---
 
 <Layout>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-    <style define:vars={{skillcolor}}>
-      .skill {
-        color: var(--skillcolor);
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-    </style>
+    <title>About</title>
   </head>
   <Header />
   <body>
@@ -41,7 +18,7 @@ const skillcolor = "navy";
         <h2>Informacion</h2>
         <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
         <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
-        <p>Primer commit desde termux</p>
+        <p> [Primer commit desde termux] </p>
       </div>
       <br>
       <Footer />
