--- a/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
+++ b/src/pages/semestre2/B201/algoritmos-y-estructuras-de-datos.astro
@@ -18,19 +18,21 @@ import Layout from "../../../layouts/Layout.astro"
                     <div class="unidad">
                         <h4>Unidad I</h4>
                         <ul class="materias">
-                            <li><a href="/semestre2/B201/practica1/">Practica 1 [10]</a></li>
-                            <li><a href="/semestre2/B201/practica2/">Practica 2 [10]</a></li>
-                            <li><a href="/semestre2/B201/practica3/">Practica 3 [10]</a></li>
-                            <li><a href="/semestre2/B201/practica4/">Practica 4 [10]</a></li>
-                            <li><a href="/semestre2/B201/practica5/">Practica 5 ![08] </a></li>
-                            <li><a href="/semestre2/B201/practica6/">Practica 6 [10]</a></li>
+                            <li><a href="/semestre2/B201/practica1/">Practica 01</a></li>
+                            <li><a href="/semestre2/B201/practica2/">Practica 02</a></li>
+                            <li><a href="/semestre2/B201/practica3/">Practica 03</a></li>
+                            <li><a href="/semestre2/B201/practica4/">Practica 04</a></li>
+                            <li><a href="/semestre2/B201/practica5/">Practica 05</a></li>
+                            <li><a href="/semestre2/B201/practica6/">Practica 06</a></li>
                         </ul>
                     </div>
                     <div class="unidad">
                         <h4>Unidad II</h4>
                         <ul class="materias">
-                            <li><a href="/semestre2/B201/practica7/">Practica 7 ![0]</a></li>
-                            <li><a href="/semestre2/B201/practica8/">Practica 8 [?]</a></li>
+                            <li><a href="/semestre2/B201/practica7/">Practica 07</a></li>
+                            <li><a href="/semestre2/B201/practica8/">Practica 08</a></li>
+                            <li><a href="/semestre2/B201/practica9/">Practica 09</a></li>
+                            <li><a href="/semestre2/B201/practica10/">Practica 10</a></li>
                         </ul>
                     </div>
                     <div class="unidad">
